
Package Version 1.3.2 2015-10-05 14:10:48 EDT
--- --- --- --- --- --- --- --- --- --- --- ---
    o fixed [DESCRIPTION] for dependent packages

Package Version 0.99.2 2014-08-21 23:46:44 EDT
--- --- --- --- --- --- --- --- --- --- --- --- 
    o added url for devel version.
    o changed [NGScopy] `MoreArgs.segments` to `MoreArgs.plotsegm`.
    o changed [NGScopy] `MoreArgs.points` to `MoreArgs.plotcn`.
    o changed [NGScopy] `[_\.]seg*` to `[_\.]segm*`, code or file.
    o changed [NGScopy] `plot_cn` to `plot_out`.


Package Version 0.99.1 2014-08-15 15:44:34 EDT
--- --- --- --- --- --- --- --- --- --- --- --- 
    o added [NGScopy] `force.rerun`.
    o added [NGScopy] `MoreArgs.cn`, `MoreArgs.seg`.
    o added [NGScopy] `dsN`, `dsT` for downsampling.
    o added [NGScopy] `parse_segtype`, `help_segtype`.
    o added [NGScopy] `segtype`, `calc_seg`, `proc_seg` for segmentation.
    o added [NGScopy] `read_regions`.
    o added [NGScopy] `regions` for targted analysis.


Package Version 0.99.1 2014-07-10 15:48:27 EDT
--- --- --- --- --- --- --- --- --- --- --- --- 
    o fixed [ngscopy-internal.R | .count_starts] `return matrix (rbind) instead of vector (c)`.
    o fixed [ngscopy-internal.R | .count_starts] `duplicate row.names via c`.
    o added `force.run to proc_normal, proc_tumor, calc_cn, make_data`.


NGScopy Version 0.99.0 2014-06-10 13:36:41 EDT
--- --- --- --- --- --- --- --- --- --- --- --- 
    o The initial release.
