@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.1): do not edit by hand
+% Generated by roxygen2 (4.1.1): do not edit by hand
+% Please edit documentation in R/ngscopy-test.R
 \name{ngscopy_unittest}
 \alias{ngscopy_unittest}
 \title{A wrapper to run unit testing of NGScopy}
