@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.1): do not edit by hand
+% Generated by roxygen2 (4.1.1): do not edit by hand
+% Please edit documentation in R/ngscopy.R
 \name{read_regions}
 \alias{read_regions}
 \title{Read regions from a data.frame, a file or a connection.}
